SPYT-682 Java 17 support
* Changelog entry
Type: feature
Component: spyt

Java 17 support
commit_hash:62e85c0d29a6a42d0ab87715e7d7abe3377b8b33